[package]
name = "cli"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sack"
path = "src/bin/main.rs"

[dependencies]
structopt = "*"
tantivy = "*"
anyhow = "*"
thiserror = "*"
failure = "*"
colored = "*"
daemon = { path = "../daemon" }
serde = { version = "1.0", features = ["derive"] }
config = "*"
reqwest = { verison = "*", features = ["json"] }
tokio = "*"