[package]
name = "monk-cli"
version = "0.2.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"
description = ""
repository="https://gitlab.com/fisherdarling/monk"
license = "Apache-2.0"
publish = false

[[bin]]
name = "monk"
path = "src/bin/monk.rs"

[dependencies]
structopt = "*"
tantivy = "*"
anyhow = "*"
thiserror = "*"
failure = "*"
colored = "*"
monkd = { path = "../monkd" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
config = "*"
scraper = "0.12.0"
reqwest = { version = "0.11.1", features = ["json"] }
tokio = { version = "1.2.*"}
url = "*"
sysinfo = "*"
term-table = "*"
open = "1"
byte-unit = "*"

[package.metadata.deb]
maintainer = "Fisher Darling <fdarling@mines.edu>"
copyright = "2020, Fisher Darling <fdarling@mines.edu>"
extended-description-file = "README.md"
depends = "$auto, libssl-dev"
section = "utility"
priority = "optional"
assets = [
    ["../target/release/monk", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/monk/README", "644"],
]
