[package]
name = "monk-db"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.25.3", features = ["bundled", "url", "chrono", "uuid"] }

tracing = "*"
tracing-subscriber = "*"
dirs = "3.0.2"
tokio = { version = "^1.6", features= ["full"] }
anyhow = "1.0.40"
thiserror = "1.0.25"
derive_more = "0.99.14"
uuid = "0.8.2"
chrono = "0.4.19"
async-graphql = "2.9.4"
url = "2.2.2"
