[package]
name = "monk-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
infer = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
monk-types = { workspace = true }
monolith = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
