[package]
name = "monk-index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
lopdf = { workspace = true }
mime = { workspace = true }
monk-types = { workspace = true }
ndarray = { workspace = true }
pdf-extract = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tantivy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }
