[package]
name = "monk-server"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

[dependencies]
monk-types = { path = "../monk-types" }
monk-db = { path = "../monk-db" }

rusqlite = { version = "0.25.3", features = ["bundled", "url", "chrono", "uuid"] }
async-graphql = { version = "2.9.7", features = ["url", "uuid", "tracing"] }
async-graphql-actix-web = "2.9.7"

tracing = "*"
tracing-subscriber = "*"
dirs = "3.0.2"
tokio = { version = "^1.6", features= ["full"] }
anyhow = "1.0.40"
thiserror = "1.0.25"
derive_more = "0.99.14"
actix-web = "3.3.2"
actix-cors = "0.5.4"
