[package]
name = "monk-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.52"
chrono = "0.4.19"
monk-types = { path = "../monk-types" }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = "0.5.10"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
uuid = "0.8.2"
