[package]
name = "monk-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
monk-types = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
