[package]
name = "monk-summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
any_ascii = "0.3"
cutters = "0.1"
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
once_cell = "1.9"
ordered-float = "3.4"
rayon = "1.5.1"
regex = "1.5.4"
rust-stemmers = "1.2.0"
rust_tokenizers = "7.0.1"
stopwords = "0.1.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-normalization = "0.1"
unicode-segmentation = "1.9"
