[package]
name = "monk-types"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = "*"
async-graphql = { version = "2.8.6", features = ["tracing", "log", "chrono", "chrono-tz", "url", "uuid"] }
uuid = "*"
chrono = "*"