[package]
name = "monk-types"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
