[package]
name = "monk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
monk-dl = { workspace = true }
monk-index = { workspace = true }
monk-sqlite = { workspace = true }
monk-summary = { workspace = true }
monk-types = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
