[package]
name = "monkd"
version = "0.2.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
description = "monkd manages a list of information that you want to later search, summarize, and open offline"
license = "AGPL-3.0"
repository="https://gitlab.com/fisherdarling/monk"
edition = "2018"
publish = false

[dependencies]
async-channel = "*"
async-lock = "1.1.2"
tokio = { version = "0.2.*", features = ["full"] }
futures = "*"
url =   { version = "*", features = ["serde"] }
chrono = { version = "*", features = ["serde"] }
anyhow = "*"
thiserror = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
rand = "0.7.3"
tracing = "*"
tracing-subscriber = { version = "*", default-features = false, features = ["fmt", "parking_lot", "ansi"] }
tracing-futures = "*"
tracing-appender = "*"
config = "*"
structopt = "*"
warp = "*"
tantivy = { git = "https://github.com/tantivy-search/tantivy.git", tag ="0.13.3" }
monolith = { path = "../monolith" }
reqwest = "0.10.10"
directories-next = "*"
async-trait = "*"
scraper = "*"

[package.metadata.deb]
maintainer = "Fisher Darling <fdarling@mines.edu>"
copyright = "2020, Fisher Darling <fdarling@mines.edu>"
extended-description-file = "README.md"
depends = "$auto, libssl-dev"
section = "utility"
priority = "optional"
assets = [
    ["../target/release/monkd", "usr/bin/", "755"],
]