[package]
name = "monk-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monk"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
dialoguer = { workspace = true }
dotenv = { workspace = true }
monk = { workspace = true }
open = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
