[package]
name = "monk-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
dioxus = { version = "0.1.8", features = ["desktop"] }
monk = { path = "../../monk" }
monk-server = { path = "../monk-server" }
tokio = "1.17.0"
