[package]
name = "monk-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
clap = { version = "3.0.13", features = ["derive"] }
crossbeam-channel = "0.5.2"
eframe = "0.16.0"
log = "0.4.14"
monk = { path = "../../monk" }
open = "2.0.2"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
uuid = "0.8.2"
